Fixed issue with subtitle alignment

--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,6 @@
   bottom:0;
 }
 
-.tvContainer {
-  width: 1200px;
-  position: relative;
-  margin: 30px;
-}
-
 .movieImage {
   max-width: 100%;
   max-height: 100%;
